@@ -2,6 +2,7 @@
 	- Fix with libnettle make test with dsa disabled.
 	- Fix contrib/fastrpz.patch to apply cleanly.  Fix for serve-stale
 	  fixes, but it does not compile, conflicts with new rpz code.
+	- Fix to clean memory leak of respip_addr.lock when ip_tree deleted.
 
 10 February 2020: George
 	- Document 'ub_result.was_ratelimited' in libunbound.
